<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:gravity="center"

                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/card_view_width"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardElevation="@dimen/card_view_elevation"
                    android:background="@color/cardbackgroundcolor"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/circularbg"
                            android:padding="10dp"
                            android:src="@drawable/attendance" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"

                            android:text="@string/information_technolgy"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/adduseritaccess"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/card_second_text"

                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/card_view_width"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_margin="10dp"
                    app:cardElevation="@dimen/card_view_elevation"
                    android:background="@color/cardbackgroundcolor"

                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/circularbg"
                            android:padding="10dp"

                            android:src="@drawable/copy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:gravity="center"
                            android:text="@string/csebranch"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/addusercseaccess"

                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/card_second_text"

                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/card_view_width"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_margin="10dp"
                    android:layout_marginTop="60dp"
                    android:clickable="true"
                    android:background="@color/cardbackgroundcolor"

                    app:cardElevation="@dimen/card_view_elevation"

                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/circularbg"
                            android:padding="10dp"

                            android:src="@drawable/copy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"

                            android:text="@string/elecsbranch"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/adduserelecsaccess"

                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/card_second_text"

                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/card_view_width"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardElevation="@dimen/card_view_elevation"
                    android:background="@color/cardbackgroundcolor"

                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/circularbg"
                            android:padding="10dp"

                            android:src="@drawable/copy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/mechautobranch"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/addusermechautoaccess"

                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/card_second_text"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/card_view_width"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:background="@color/cardbackgroundcolor"

                    app:cardElevation="@dimen/card_view_elevation"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/circularbg"
                            android:padding="10dp"
                            android:src="@drawable/attendance" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"

                            android:text="@string/civilbranch"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/addusercivilaccess"
                            android:textColor="@android:color/darker_gray"

                            android:textSize="@dimen/card_second_text"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/card_view_width"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardElevation="@dimen/card_view_elevation"
                    android:background="@color/cardbackgroundcolor"

                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/circularbg"
                            android:padding="10dp"

                            android:src="@drawable/copy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"

                            android:text="@string/mechprobranch"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/addusermechproaccess"

                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/card_second_text"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>