<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    android:padding="15dp"
                    android:text="@string/welcome"
                    android:textColor="#fcfcfc"
                    android:textSize="20dp"
                    android:textStyle="bold" />





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="#fff"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:text="@string/info"

                            android:textSize="17dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/hod_profile_image_IV"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:paddingTop="3dp"
                            android:layout_gravity="center"
                            android:src="@drawable/principal" />


                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:textSize="17dp"

                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/achivement"
                        />

                </LinearLayout>



            </LinearLayout>


        </ScrollView>

        </LinearLayout>


</RelativeLayout>